// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketReplyArea/> _hideMacrosAndFocusEditor() should hide macros and focus editor when called 1`] = `
<TicketReplyArea
  applyMacro={[MockFunction]}
  cacheAdded={false}
  currentMacro={Object {}}
  currentTicket={Immutable.Map {}}
  currentUser={Immutable.Map {}}
  customers={Object {}}
  fetchMacrosCancellable={[Function]}
  newMessage={Object {}}
  newMessageType="email"
  notify={[Function]}
  page={1}
  preferences={Immutable.Map {}}
  selectMacro={[MockFunction]}
  ticket={Immutable.Map {}}
  totalPages={1}
>
  <div
    className="component"
  >
    <div
      className="search"
    >
      <i
        className="searchIcon material-icons md-2 text-info"
      >
        bolt
      </i>
      <input
        className="input"
        disabled={false}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search macros by name, tags or body..."
        tabIndex={3}
      />
    </div>
    <div
      className="content"
    >
      <TicketReplyMock
        applyMacro={[Function]}
        macros={Immutable.List []}
        richAreaRef={[Function]}
        shouldDisplayQuickReply={false}
        ticket={Immutable.Map {}}
      >
        <div>
          hello
        </div>
      </TicketReplyMock>
    </div>
  </div>
</TicketReplyArea>
`;

exports[`<TicketReplyArea/> should block the reply area because the customer is required on ticket creation with an internal-note 1`] = `
<TicketReplyArea
  applyMacro={[MockFunction]}
  cacheAdded={false}
  currentMacro={Object {}}
  currentTicket={
    Immutable.Map {
      "id": null,
      "customer": null,
    }
  }
  currentUser={Immutable.Map {}}
  customers={Object {}}
  fetchMacrosCancellable={[Function]}
  newMessage={Object {}}
  newMessageType="internal-note"
  notify={[Function]}
  page={1}
  preferences={Immutable.Map {}}
  selectMacro={[MockFunction]}
  ticket={Immutable.Map {}}
  totalPages={1}
>
  <div
    className="component"
  >
    <div
      className="search"
    >
      <i
        className="searchIcon material-icons md-2 text-info"
      >
        bolt
      </i>
      <input
        className="input"
        disabled={true}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search macros by name, tags or body..."
        tabIndex={3}
      />
    </div>
    <div
      className="content"
    >
      <div
        className="replyAreaAlertMessage alert-warning"
      >
        <span>
          To create a ticket with an internal note, please
          <a
            href="https://docs.gorgias.com/ticket/internal-notes#create_a_ticket_with_an_internal_note"
            rel="noopener noreferrer"
            target="_blank"
          >
             
            set a customer
             
          </a>
          first in the infobar
        </span>
      </div>
    </div>
  </div>
</TicketReplyArea>
`;

exports[`<TicketReplyArea/> should render 1`] = `
<div
  className="component"
>
  <div
    className="search"
  >
    <i
      className="searchIcon material-icons md-2 text-info"
    >
      bolt
    </i>
    <input
      className="input"
      disabled={false}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search macros by name, tags or body..."
      tabIndex={3}
    />
  </div>
  <div
    className="content"
  >
    <TicketReplyMock
      applyMacro={[Function]}
      macros={Immutable.List []}
      richAreaRef={[Function]}
      shouldDisplayQuickReply={false}
      ticket={Immutable.Map {}}
    />
  </div>
</div>
`;
